Wallpaper Engine support

--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html>
-	<head><meta charset="UTF-8"></head>
-	<style>
-		body, html {height: 100%; margin:0;}
-	</style>
-	<body>
-		<div style="width:100%; height:100%;">
-			<script src="mono.js"></script>
-		</div>
-	</body>
-</html>
+<meta charset="UTF-8"></head>
+<title>Ribbon Turmoil</title>
+<style>
+	body, html {height: 100%; margin:0; background-color: rgb(13,10,10);}
+</style>
+<div style="width:100%; height:100%; overflow:hidden;">
+	<script src="mono.js"></script>
+</div>
